[gd_scene load_steps=8 format=3 uid="uid://dd7vuam6cs4fp"]

[ext_resource type="Script" path="res://scripts/mechanics/power/power_orb.gd" id="1_dmnnh"]
[ext_resource type="Script" path="res://scripts/mechanics/shared/absorb_handler.gd" id="2_kwn5a"]
[ext_resource type="Material" uid="uid://cby3cclkw40gu" path="res://materials/power.tres" id="3_pwhd1"]
[ext_resource type="Script" path="res://scripts/mechanics/shared/drop_power.gd" id="4_b2vt6"]
[ext_resource type="PackedScene" uid="uid://bkirx1sxnwhq" path="res://prefabs/power/dropped_power_ball.tscn" id="5_ga1ti"]

[sub_resource type="SphereMesh" id="SphereMesh_x6y6o"]
material = ExtResource("3_pwhd1")

[sub_resource type="SphereShape3D" id="SphereShape3D_34gph"]

[node name="PowerOrb" type="Area3D"]
collision_layer = 64
collision_mask = 0
script = ExtResource("1_dmnnh")

[node name="Mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_x6y6o")

[node name="Collider" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_34gph")

[node name="AbsorbHandler" type="Node" parent="."]
script = ExtResource("2_kwn5a")

[node name="DropPower" type="Node3D" parent="."]
script = ExtResource("4_b2vt6")
power_scene = ExtResource("5_ga1ti")
power_drop_offset = 2.0
